--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     </header>
 
     <section class="content">
+        <div class="image-container">
+            <img src="images/full-map.png" alt="Salary Heatmap" class="responsive-image">
+        </div>
+
         <div class="card">
             <h2>What is the purpose of the Visualization?</h2>
             <p>The Levels.fyi Compensation Heatmap visualization provides insights into salary trends across different areas and regions for software engineers. </p>
@@ -21,6 +25,9 @@
         <div class="card">
             <h2>What is the data and how was it collected?</h2>
             <p>The data in this visualization is an intersection of location and salary. The data is captured primarily from user-submitted salary reports from software engineering employees. Users voluntarily submit their salary details, job title, company, and location and Levels.fyi verifies and updates the visualization.</p>
+            <div class="image-container">
+                <img src="images/salaries.png" alt="Salary Comparison Heatmap" class="responsive-image">
+            </div>
         </div>
 
         <div class="card">
@@ -31,10 +38,30 @@
         <div class="card">
             <h2>What questions can people ask and answer about this data using this visualization? How can they find the answers with this tool?</h2>
             <ul class="indent">
-                <li><strong>How does my salary compare to others in my location?</strong> – The user can either search for or select their area on the map and view the salary percentiles to compare their salary with these ranges. </li>
-                <li><strong>Which locations offer the highest software engineer salaries?</strong> – The user can switch the dropdown option in the top right to choose a higher percentile, then view the hotspots on the map.</li>
-                <li><strong>What do average software engineer salaries look like in other countries?</strong> – The user can use the globe dropdown at the top of the screen to select one of various countries to compare their salary to. </li>
-                <li><strong>Which areas offer the best salary-to-cost-of-living ratio?</strong> – The user can use the Cost-of-Living Adjustment switch to consider cost of living in the displayed salaries. </li>
+                <li>
+                    <strong>How does my salary compare to others in my location?</strong> – The user can either search for or select their area on the map and view the salary percentiles to compare their salary with these ranges. 
+                    <div class="image-container">
+                        <img src="images/specific-location.png" alt="Salary Comparison Heatmap" class="responsive-image">
+                    </div>
+                </li>
+                <li>
+                    <strong>Which locations offer the highest or lowest software engineer salaries?</strong> – The user can switch the dropdown option in the top right to choose a higher percentile, then view the hotspots on the map.
+                    <div class="image-container">
+                        <img src="images/specific-percentile.png" alt="Salary Comparison Heatmap" class="responsive-image">
+                    </div>
+                </li>
+                <li>
+                    <strong>What do average software engineer salaries look like in other countries?</strong> – The user can use the globe dropdown at the top of the screen to select one of various countries to compare their salary to. 
+                    <div class="image-container">
+                        <img src="images/specific-country.png" alt="Salary Comparison Heatmap" class="responsive-image">
+                    </div>
+                </li>
+                <li>
+                    <strong>Which areas offer the best salary-to-cost-of-living ratio?</strong> – The user can use the Cost-of-Living Adjustment switch to consider cost of living in the displayed salaries. 
+                    <div class="image-container">
+                        <img src="images/cost-of-living.png" alt="Salary Comparison Heatmap" class="responsive-image">
+                    </div>
+                </li>
             </ul>
         </div>
 
