--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <h1>Vis in the Wild</h1>
-        <a href="https://www.levels.fyi/heatmap/"><h3>Levels.fyi Compensation Heatmap</h2></a>
+        <a href="https://www.levels.fyi/heatmap/"><h5>Levels.fyi Compensation Heatmap</h5></a>
+        <h6>Ricky Roberts</h6>
     </header>
 
     <section class="content">
